// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildBanterPrompt > matches the pinned snapshot for a fixed context 1`] = `
{
  "system": "Facts in the RECORD block are authoritative and complete. Never state a score, record, streak or result that is not in RECORD. MEMORY items are color: callbacks, tone, grudges. If MEMORY contradicts RECORD, RECORD wins.
Never mention money, betting, stakes, wagers, dollar amounts, or odds as prices.
Write in the product voice: terse, dry, receipt-flavored. No emoji. No hashtags.",
  "user": "RECORD: fox-4821 vs kingfisher-0042 — 5-3-1 lifetime.

Current week: fox-4821 2 — 1 kingfisher-0042, 3 day(s) remaining.

Last verdict: fox-4821 took it by a hair.

MEMORY:
- kingfisher-0042 rage-quit after the last loss

Write 1-3 short banter lines for the viewer to read about this rivalry.",
}
`;

exports[`buildBanterPrompt > matches the pinned snapshot with no active week or memory 1`] = `
{
  "system": "Facts in the RECORD block are authoritative and complete. Never state a score, record, streak or result that is not in RECORD. MEMORY items are color: callbacks, tone, grudges. If MEMORY contradicts RECORD, RECORD wins.
Never mention money, betting, stakes, wagers, dollar amounts, or odds as prices.
Write in the product voice: terse, dry, receipt-flavored. No emoji. No hashtags.",
  "user": "RECORD: fox-4821 vs kingfisher-0042 — 0-0-0 lifetime.

No active week in progress.

No prior verdict on record.

MEMORY:
(none)

Write 1-3 short banter lines for the viewer to read about this rivalry.",
}
`;

exports[`buildCalloutDraftPrompt > matches the pinned snapshot for a fixed context 1`] = `
{
  "system": "Facts in the RECORD block are authoritative and complete. Never state a score, record, streak or result that is not in RECORD. MEMORY items are color: callbacks, tone, grudges. If MEMORY contradicts RECORD, RECORD wins.
Never mention money, betting, stakes, wagers, dollar amounts, or odds as prices.
Write in the product voice: terse, dry, receipt-flavored. No emoji. No hashtags.",
  "user": "RECORD: fox-4821 vs kingfisher-0042 — 5-3-1 lifetime.

MEMORY:
- kingfisher-0042 rage-quit after the last loss

Write a few short callout-message drafts fox-4821 could send to challenge kingfisher-0042 to a rematch.",
}
`;

exports[`buildRecapPrompt > matches the pinned snapshot for a fixed context 1`] = `
{
  "system": "Facts in the RECORD block are authoritative and complete. Never state a score, record, streak or result that is not in RECORD. MEMORY items are color: callbacks, tone, grudges. If MEMORY contradicts RECORD, RECORD wins.
Never mention money, betting, stakes, wagers, dollar amounts, or odds as prices.
Write in the product voice: terse, dry, receipt-flavored. No emoji. No hashtags.",
  "user": "RECORD: fox-4821, Season 3 — 4 pairing(s), 10-6-1, best streak 5, 3 callout(s) sent (2 won).

VERDICTS (in order):
- fox-4821 took week 1.
- kingfisher-0042 took week 2.

MEMORY:
- a running joke about week 2

Write a short season recap for fox-4821 covering Season 3: a title and 1-4 paragraphs.",
}
`;
